--- a/index.html
+++ b/index.html
@@ -1,31 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>FYM Proxy Clone</title>
+  <meta charset="UTF-8">
+  <title>FYM Mini Browser</title>
   <style>
-    html, body {
+    body, html {
       margin: 0;
       padding: 0;
       height: 100%;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
     }
-    iframe {
-      width: 100%;
-      height: 100%;
+    #controls {
+      background: #4a90e2;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+    }
+    #urlInput {
+      flex: 1;
+      padding: 8px;
+      font-size: 16px;
+      border-radius: 4px;
       border: none;
+      margin-right: 5px;
+    }
+    #goButton {
+      padding: 8px 16px;
+      font-size: 16px;
+      border: none;
+      border-radius: 4px;
+      background-color: white;
+      cursor: pointer;
+    }
+    #goButton:hover {
+      background-color: #e0e0e0;
+    }
+    #browserFrame {
+      flex: 1;
+      border: none;
+      width: 100%;
     }
   </style>
 </head>
 <body>
-  <iframe id="proxyFrame" src="https://jsproxy1.jimmytinsley.workers.dev/-----https://duckduckgo.com/"></iframe>
 
-  <script>
-    // Optional JS: dynamically change iframe URL
-    function loadProxy(url) {
-      document.getElementById('proxyFrame').src = url;
+<div id="controls">
+  <input type="text" id="urlInput" placeholder="Type a URL or search term..." value="https://duckduckgo.com/">
+  <button id="goButton">Go</button>
+</div>
+
+<iframe id="browserFrame" src="https://jsproxy1.jimmytinsley.workers.dev/-----https://duckduckgo.com/"></iframe>
+
+<script>
+  const iframe = document.getElementById('browserFrame');
+  const input = document.getElementById('urlInput');
+  const button = document.getElementById('goButton');
+
+  button.addEventListener('click', () => {
+    let url = input.value.trim();
+    if(!url) return;
+
+    // If the user typed something without http/https, treat it as a DuckDuckGo search
+    if(!url.startsWith('http')) {
+      url = "https://duckduckgo.com/?q=" + encodeURIComponent(url);
     }
 
-    // Example usage: switch to another site
-    // loadProxy("https://jsproxy1.jimmytinsley.workers.dev/-----https://example.com/");
-  </script>
+    // Encode it for jsproxy
+    const proxyUrl = "https://jsproxy1.jimmytinsley.workers.dev/-----" + url;
+    iframe.src = proxyUrl;
+  });
+
+  // Enter key support
+  input.addEventListener('keypress', e => {
+    if(e.key === "Enter") button.click();
+  });
+</script>
+
 </body>
 </html>
